@@ -301,6 +301,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|fs
 operator|.
 name|FileStatus
@@ -318,6 +332,20 @@ operator|.
 name|fs
 operator|.
 name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FsShell
 import|;
 end_import
 
@@ -3806,15 +3834,8 @@ decl_stmt|;
 try|try
 block|{
 comment|/**        * Move files before creating the partition since down stream processes        * check for existence of partition in metadata before accessing the data.        * If partition is created before data is moved, downstream waiting        * processes might move forward with partial data        */
-name|FileSystem
-name|fs
-decl_stmt|;
-name|Path
-name|partPath
-decl_stmt|;
-comment|// check if partition exists without creating it
 name|Partition
-name|part
+name|oldPart
 init|=
 name|getPartition
 argument_list|(
@@ -3823,35 +3844,33 @@ argument_list|,
 name|partSpec
 argument_list|,
 literal|false
+argument_list|,
+literal|null
 argument_list|)
+decl_stmt|;
+name|Path
+name|oldPartPath
+init|=
+literal|null
 decl_stmt|;
 if|if
 condition|(
-name|part
-operator|==
+name|oldPart
+operator|!=
 literal|null
 condition|)
 block|{
-comment|// Partition does not exist currently. The partition name is
-comment|// extrapolated from
-comment|// the table's location (even if the table is marked external)
-name|fs
+name|oldPartPath
 operator|=
-name|FileSystem
+name|oldPart
 operator|.
-name|get
-argument_list|(
-name|tbl
-operator|.
-name|getDataLocation
+name|getPartitionPath
 argument_list|()
-argument_list|,
-name|getConf
-argument_list|()
-argument_list|)
 expr_stmt|;
+block|}
+name|Path
 name|partPath
-operator|=
+init|=
 operator|new
 name|Path
 argument_list|(
@@ -3870,34 +3889,38 @@ argument_list|(
 name|partSpec
 argument_list|)
 argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-comment|// Partition exists already. Get the path from the partition. This will
-comment|// get the default path for Hive created partitions or the external path
-comment|// when directly created by user
+decl_stmt|;
+name|Path
+name|newPartPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|loadPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getScheme
+argument_list|()
+argument_list|,
+name|loadPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getAuthority
+argument_list|()
+argument_list|,
 name|partPath
-operator|=
-name|part
+operator|.
+name|toUri
+argument_list|()
 operator|.
 name|getPath
 argument_list|()
-index|[
-literal|0
-index|]
-expr_stmt|;
-name|fs
-operator|=
-name|partPath
-operator|.
-name|getFileSystem
-argument_list|(
-name|getConf
-argument_list|()
 argument_list|)
-expr_stmt|;
-block|}
+decl_stmt|;
 if|if
 condition|(
 name|replace
@@ -3909,23 +3932,42 @@ name|replaceFiles
 argument_list|(
 name|loadPath
 argument_list|,
-name|partPath
+name|newPartPath
 argument_list|,
-name|fs
+name|oldPartPath
 argument_list|,
 name|tmpDirPath
+argument_list|,
+name|getConf
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
 else|else
 block|{
+name|FileSystem
+name|fs
+init|=
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|tbl
+operator|.
+name|getDataLocation
+argument_list|()
+argument_list|,
+name|getConf
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|Hive
 operator|.
 name|copyFiles
 argument_list|(
 name|loadPath
 argument_list|,
-name|partPath
+name|newPartPath
 argument_list|,
 name|fs
 argument_list|)
@@ -3938,8 +3980,6 @@ operator|!
 name|holdDDLTime
 condition|)
 block|{
-name|part
-operator|=
 name|getPartition
 argument_list|(
 name|tbl
@@ -3947,6 +3987,11 @@ argument_list|,
 name|partSpec
 argument_list|,
 literal|true
+argument_list|,
+name|newPartPath
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -4583,6 +4628,40 @@ name|partition
 argument_list|)
 return|;
 block|}
+specifier|public
+name|Partition
+name|getPartition
+parameter_list|(
+name|Table
+name|tbl
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
+parameter_list|,
+name|boolean
+name|forceCreate
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
+return|return
+name|getPartition
+argument_list|(
+name|tbl
+argument_list|,
+name|partSpec
+argument_list|,
+name|forceCreate
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
 comment|/**    * Returns partition metadata    *    * @param tbl    *          the partition's table    * @param partSpec    *          partition keys and values    * @param forceCreate    *          if this is true and partition doesn't exist then a partition is    *          created    * @return result partition object or null if there is no partition    * @throws HiveException    */
 specifier|public
 name|Partition
@@ -4601,6 +4680,9 @@ name|partSpec
 parameter_list|,
 name|boolean
 name|forceCreate
+parameter_list|,
+name|String
+name|partPath
 parameter_list|)
 throws|throws
 name|HiveException
@@ -4925,6 +5007,41 @@ name|tbl
 operator|.
 name|getSerializationLib
 argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|partPath
+operator|==
+literal|null
+operator|||
+name|partPath
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|""
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+literal|"new partition path should not be null or empty."
+argument_list|)
+throw|;
+block|}
+name|tpart
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|setLocation
+argument_list|(
+name|partPath
 argument_list|)
 expr_stmt|;
 name|alterPartition
@@ -6406,7 +6523,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**    * Replaces files in the partition with new data set specifed by srcf. Works    * by moving files    *    * @param srcf    *          Files to be moved. Leaf Directories or Globbed File Paths    * @param destf    *          The directory where the final data needs to go    * @param fs    *          The filesystem handle    * @param tmppath    *          Temporary directory    */
+comment|/**    * Replaces files in the partition with new data set specifed by srcf. Works    * by moving files.    * srcf, destf, and tmppath should resident in the same dfs, but the oldPath can be in a     * different dfs.    *    * @param srcf    *          Files to be moved. Leaf Directories or Globbed File Paths    * @param destf    *          The directory where the final data needs to go    * @param oldPath    *          The directory where the old data location, need to be cleaned up.    * @param tmppath    *          Temporary directory    */
 specifier|static
 specifier|protected
 name|void
@@ -6418,15 +6535,73 @@ parameter_list|,
 name|Path
 name|destf
 parameter_list|,
-name|FileSystem
-name|fs
+name|Path
+name|oldPath
 parameter_list|,
 name|Path
 name|tmppath
+parameter_list|,
+name|Configuration
+name|conf
 parameter_list|)
 throws|throws
 name|HiveException
 block|{
+name|FileSystem
+name|fs
+init|=
+literal|null
+decl_stmt|;
+name|FsShell
+name|fshell
+init|=
+operator|new
+name|FsShell
+argument_list|()
+decl_stmt|;
+name|fshell
+operator|.
+name|setConf
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|fs
+operator|=
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|srcf
+operator|.
+name|toUri
+argument_list|()
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e1
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+name|e1
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e1
+argument_list|)
+throw|;
+block|}
 name|FileStatus
 index|[]
 name|srcs
@@ -6594,34 +6769,74 @@ block|}
 block|}
 block|}
 comment|// point of no return
-name|boolean
-name|b
-init|=
-name|fs
+if|if
+condition|(
+name|oldPath
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|fshell
 operator|.
-name|delete
+name|run
 argument_list|(
-name|destf
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
-name|LOG
+operator|new
+name|String
+index|[]
+block|{
+literal|"-rmr"
+block|,
+name|oldPath
 operator|.
-name|debug
-argument_list|(
-literal|"Deleting:"
-operator|+
-name|destf
+name|toUri
+argument_list|()
 operator|.
 name|toString
 argument_list|()
-operator|+
-literal|",Status:"
-operator|+
-name|b
+block|}
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|//swallow the exception
+block|}
+block|}
+try|try
+block|{
+name|fshell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-rmr"
+block|,
+name|destf
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{       }
 comment|// create the parent directory otherwise rename can fail if the parent
 comment|// doesn't exist
 if|if
@@ -6654,8 +6869,9 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
+name|boolean
 name|b
-operator|=
+init|=
 name|fs
 operator|.
 name|rename
@@ -6664,7 +6880,7 @@ name|tmppath
 argument_list|,
 name|destf
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 operator|!
