@@ -2808,29 +2808,6 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
-name|FileSystem
-name|fs
-decl_stmt|;
-try|try
-block|{
-name|fs
-operator|=
-name|FileSystem
-operator|.
-name|get
-argument_list|(
-name|getDataLocation
-argument_list|()
-argument_list|,
-name|Hive
-operator|.
-name|get
-argument_list|()
-operator|.
-name|getConf
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|Hive
 operator|.
 name|replaceFiles
@@ -2847,28 +2824,19 @@ name|getPath
 argument_list|()
 argument_list|)
 argument_list|,
-name|fs
+literal|null
 argument_list|,
 name|tmpd
+argument_list|,
+name|Hive
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getConf
+argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|HiveException
-argument_list|(
-literal|"addFiles: filesystem error in check phase"
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
 block|}
 comment|/**    * Inserts files specified into the partition. Works by moving files    *    * @param srcf    *          Files to be moved. Leaf directories or globbed file paths    */
 specifier|protected
