@@ -20998,15 +20998,53 @@ operator|.
 name|getTable
 argument_list|()
 expr_stmt|;
-name|dest_path
-operator|=
-name|dest_part
+name|Path
+name|tabPath
+init|=
+name|dest_tab
 operator|.
 name|getPath
 argument_list|()
-index|[
-literal|0
-index|]
+decl_stmt|;
+name|Path
+name|partPath
+init|=
+name|dest_part
+operator|.
+name|getPartitionPath
+argument_list|()
+decl_stmt|;
+comment|// if the table is in a different dfs than the partition,
+comment|// replace the partition's dfs with the table's dfs.
+name|dest_path
+operator|=
+operator|new
+name|Path
+argument_list|(
+name|tabPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getScheme
+argument_list|()
+argument_list|,
+name|tabPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getAuthority
+argument_list|()
+argument_list|,
+name|partPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
 expr_stmt|;
 if|if
 condition|(
